feat: Added End Game Screen to Display all Prompts and Drawings

--- a/src/views/game.html
+++ b/src/views/game.html
@@ -124,6 +124,14 @@
         </div>
     </div>
 
+   <!-- End game screen -->
+    <div id='endGameScreen' class='flex-container' style="display: none;">
+        <div class='end-game-box'>
+            <h1 class='end-game-title'>Game Over</h1>
+            <!-- You can add more elements here to show game results, etc. -->
+        </div>
+    </div>
+
     <!-- Load Socket.IO library -->
     <script src="/socket.io/socket.io.js"></script>
     <script type="module" src="/scripts/classes/client.js"></script>
