refactor: Adjusted Names of Buttons

--- a/src/views/game.html
+++ b/src/views/game.html
@@ -95,7 +95,7 @@
                         </div>
                     </div>
 
-                    <button id='submitDrawing' class='button draw-button'>Submit Drawing</button>
+                    <button id='submit-drawing-button' class='button draw-button'>Submit Drawing</button>
                 </div>
                 
             </div>
