feat: Added Functionality for Game Loop to be Maintained when Player Leaves during Gameplay Loop and Counter for Until Players Turn

--- a/src/views/game.html
+++ b/src/views/game.html
@@ -120,7 +120,7 @@
     <!-- Waiting screen -->
     <div id='waitingScreen' class='flex-container' style="display: none;">
         <div class='waiting-box'>
-            <h1 class='waiting-title'>Waiting for another players turn to finish...</h1>
+            <h1 id = 'waiting-screen-title' class='waiting-title'>Waiting for another players turn to finish...</h1>
         </div>
     </div>
 
