--- a/src/views/game.html
+++ b/src/views/game.html
@@ -151,11 +151,10 @@
     </div>  
 
    <!-- End game screen -->
-    <div id='endGameScreen' class='flex-container' style="display: none;">
-        <div class='end-game-box'>
-            <h1 class='end-game-title'>Game Over</h1>
-            <!-- You can add more elements here to show game results, etc. -->
-        </div>
+    <div id='endGameScreen' class='container' style="display: none;">
+        <p class = 'title-drawing'>Game Over</p>
+        <button type="submit" id="backToLobbyButton" class="button lobby-button">Return to Lobby</button>
+        <button type="submit" id="backToLobbyScreen" class="button lobby-button">End Game Session</button>
     </div>
 
     <!-- Load scripts -->
