feat: Return to Lobby Session after Game Over

--- a/src/views/game.html
+++ b/src/views/game.html
@@ -153,8 +153,8 @@
    <!-- End game screen -->
     <div id='endGameScreen' class='container' style="display: none;">
         <p class = 'title-drawing'>Game Over</p>
-        <button type="submit" id="backToLobbyButton" class="button lobby-button">Return to Lobby</button>
-        <button type="submit" id="backToLobbyScreen" class="button lobby-button">End Game Session</button>
+        <button id="backToLobbySessionButton" class="button lobby-button">Return to Lobby</button>
+        <button id="backToLobbyScreenButton" class="button lobby-button">End Game Session</button>
     </div>
 
     <!-- Load scripts -->
