fix: Drawing Screen Timer Reset

--- a/src/views/game.html
+++ b/src/views/game.html
@@ -96,7 +96,7 @@
                         </div>
                     </div>
 
-                    <button id='submit-drawing-button' class='button draw-button'>Submit Drawing</button>
+                    <button id='submitDrawingButton' class='button draw-button'>Submit Drawing</button>
                 </div>
                 
             </div>
