feat: Add countdown for prompting

--- a/src/views/game.html
+++ b/src/views/game.html
@@ -119,6 +119,13 @@
             <!-- Prompt submit button -->
             <button id="prompt-button" class="button lobby-button">Submit</button>
         </form>
+        
+        <div class = 'prompt-timer-container'>
+            <div>
+                <p class = 'title-prompting' id = 'promptTimerLabel'> Time Remaining</p>
+                <p class = 'prompt-countdown-timer' id = "promptCountdownTimer"></p>
+            </div>
+        </div>
     </div>
 
     <!-- Waiting screen -->
