--- a/src/views/game.html
+++ b/src/views/game.html
@@ -122,8 +122,8 @@
         
         <div class = 'prompt-timer-container'>
             <div>
-                <p class = 'title-prompting' id = 'promptTimerLabel'> Time Remaining</p>
-                <p class = 'prompt-countdown-timer' id = "promptCountdownTimer"></p>
+                <p class = 'lobby-container-text prompt-time-container' id = 'promptTimerLabel'> Time Remaining:</p>
+                <p class = 'room-code-container start-time-container' id = "promptCountdownTimer"></p>
             </div>
         </div>
     </div>
