feat: Add Prompt Generation Button

--- a/src/views/game.html
+++ b/src/views/game.html
@@ -119,7 +119,9 @@
             <!-- Prompt submit button -->
             <button id="prompt-button" class="button lobby-button">Submit</button>
         </form>
-        
+        <div> 
+            <button id="randomPromptButton" class="button lobby-button">Prompt For Me</button>
+        </div>
         <div class = 'prompt-timer-container'>
             <div>
                 <p class = 'lobby-container-text prompt-time-container' id = 'promptTimerLabel'> Time Remaining:</p>
