style: Make Current Player and Role Message Bold

--- a/src/views/game.html
+++ b/src/views/game.html
@@ -136,7 +136,7 @@
         <dotlottie-player src="https://lottie.host/6ee573f4-c43f-4939-b753-8850ca1904e0/8i15FEz9Cv.json" 
         background="transparent" speed="1" style="width: 200px; height: 200px;" loop autoplay></dotlottie-player>
         <p class = 'title-drawing'>On Hold</p>
-        <p id = "currentRoundMessage" class="room-code-container"> '</h1>
+        <p id = "currentRoundMessage" class="lobby-container-text"> '</p>
         <p id = 'turnIndicatorMessage' class = 'room-code-container'>Waiting for another players turn to finish...</p>
     </div>
 
