--- a/src/views/draw.html
+++ b/src/views/draw.html
@@ -11,50 +11,102 @@
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
 </head>
 <body class="body draw-body">
-    <div class="flex-container">
-        <div class='tool-box' id='tool-box'>
-            <div class='row'>
-                <label class='title-drawing'>Tool Selection</label>
-                <ul class='options'>
-                    <!-- Tool option -->
-                    <li class='tool-option' id="tool-option-1" onClick = 'pen()'>
-                        <!-- Icon for pen -->
-                        <img class="svg" id = 'pen-option' src="/images/pen.svg" alt="">
-                        <!-- Label for pen -->
-                        <span>Pen</span>
-                    </li>
+    <div style = "align-items: center; display: flex; flex-direction: column; justify-content: center; ">
+        <div id = "drawing-prompt" class = "container prompt-container">
+            <p id = "header-drawing-prompt" class = 'room-code-container'></p>
+        </div>
+        <div id="drawingScreen" class="flex-container">
+            <div class='tool-box' id='tool-box'>
+                <div class='row'>
+                    <label class='title-drawing'>Tool Selection</label>
+                    <ul class='options'>
+                        <!-- Tool option: pen -->
+                        <li class='tool-option' id="tool-option-1" onClick = 'pen()'>
+                            <!-- Icon for pen -->
+                            <img class="svg" id = 'pen-option' src="/images/pen.svg" alt="">
+                            <!-- Label for pen -->
+                            <span>Pen</span>
+                        </li>
 
-                    <!-- Tool option -->
-                    <li class='tool-option' id="tool-option-2" onClick = 'eraser()'>
-                        <!-- Icon for eraser -->
-                        <img class="svg" id = 'eraser-option' src="/images/eraser.svg" alt="">
-                        <!-- Label for eraser -->
-                        <span>Eraser</span>
-                    </li>
+                        <!-- Tool option: eraser -->
+                        <li class='tool-option' id="tool-option-2" onClick = 'eraser()'>
+                            <!-- Icon for eraser -->
+                            <img class="svg" id = 'eraser-option' src="/images/eraser.svg" alt="">
+                            <!-- Label for eraser -->
+                            <span>Eraser</span>
+                        </li>
 
-                    <!-- Button option -->
-                    <li class='tool-option'>
-                        <button class='button draw-button' id='clear-canvas-button'>Button 1</button>
-                    </li>
-
-                    <!-- Button option -->
-                    <li class='tool-option'>
-                        <button class='button draw-button' id='clear-canvas-button'>Button 2</button>
-                    </li>
-                </ul>
+                        <!-- Tool option: Highlighter -->
+                        <li class='tool-option' id = 'tool-option-3' onClick = 'highlighter()'>
+                            <!-- Icon for highlighter -->
+                            <img class="svg" id = 'highlighter-option' src="/images/paint-format.svg" alt="">
+                            <!-- Label for highlighter -->
+                            <span>Highlighter</span>
+                        </li>
+                                            
+                        <!-- Tool option: SprayCan -->
+                        <li class='tool-option' id = 'tool-option-4' onClick = 'spraycan()'>
+                            <!-- Icon for spray can -->
+                                <img class="svg" id = 'spraycan-option' src="/images/magic-wand.svg" alt="">
+                                <!-- Label for spray can -->
+                                <span>SprayCan</span>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Row for color selection -->
+                <div class='row'>
+                    <!-- Label for color selection -->
+                    <label class='title-drawing'>Color Selection:</label>
+                    <!-- List of color options -->
+                    <ul class='options color-options'>
+                        <!-- Color option: Red -->
+                        <li><div onClick="changeColor(this)" id = 'red-color-option' class='btn-color-field' style='background: red;'></div></li>
+                        <!-- Color option: Green -->
+                        <li><div onClick="changeColor(this)" id = 'green-color-option' class='btn-color-field' style='background: green;'></div></li>
+                        <!-- Color option: Blue -->
+                        <li><div onClick="changeColor(this)" id = 'blue-color-option' class='btn-color-field' style='background: blue;'></div></li>
+                        <!-- Color option: Purple -->
+                        <li><div onClick="changeColor(this)" id = 'purple-color-option' class='btn-color-field' style='background: purple;'></div></li>
+                    </ul>
+                    <!-- Input for color selection -->
+                    <input onInput = 'changeColorPicker(this.value)' type='color' class="color-option">
+                </div>
+                <div class='row'>
+                    <ul class='options'>
+                        <!-- Button option -->
+                        <li class='tool-option'>
+                            <button class='button draw-button' id='undo-canvas-button'>Undo</button>
+                        </li>
+    
+                        <!-- Button option -->
+                        <li class='tool-option'>
+                            <button class='button draw-button' id='clear-canvas-button'>Clear</button>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class='canvas-container'>
-            <canvas class='drawing-canvas' id="drawing-canvas"></canvas>
-        </div>
-
-        <div class = 'tool-box timer-container'>
-            <div class='row'>
-            <p class = 'title-drawing' id = 'timer-label'> Time Remaining:</p>
-            <p class = 'countdown-timer' id = "countdownTimer"></p>
+            
+            <div class='canvas-container'>
+                <canvas class='drawing-canvas' id="drawing-canvas"></canvas>
             </div>
+
+            <div style="display: flex; flex-direction: column; gap: 10px;">
+                <div class = 'tool-box timer-container'>
+                    <div class='row'>
+                        <p class = 'title-drawing' id = 'timer-label'> Time Remaining</p>
+                        <p class = 'countdown-timer' id = "countdownTimer"></p>
+                    </div>
+                </div>
+                
+                <div class = 'tool-box player-container'>
+                    <div id="usernameDisplayOnDraw" class='row'>
+                    </div>
+                </div>
+
+                <button id='submitDrawingButton' class='button draw-button'>Submit Drawing</button>
+            </div>
+            
         </div>
-        
     </div>
 
     <script src="/scripts/classes/draw.js"></script>
