feat: Added Additional Tools to the Game Drawing Screen

--- a/src/views/game.html
+++ b/src/views/game.html
@@ -65,6 +65,22 @@
                                 <!-- Label for eraser -->
                                 <span>Eraser</span>
                             </li>
+
+                            <!-- Tool option: Highlighter -->
+                            <li class='tool-option' id = 'tool-option-3' onClick = 'highlighter()'>
+                                <!-- Icon for highlighter -->
+                                <img class="svg" id = 'highlighter-option' src="/images/paint-format.svg" alt="">
+                                <!-- Label for highlighter -->
+                                <span>Highlighter</span>
+                            </li>
+                                                
+                            <!-- Tool option: SprayCan -->
+                            <li class='tool-option' id = 'tool-option-4' onClick = 'spraycan()'>
+                                <!-- Icon for spray can -->
+                                    <img class="svg" id = 'spraycan-option' src="/images/magic-wand.svg" alt="">
+                                    <!-- Label for spray can -->
+                                    <span>SprayCan</span>
+                            </li>
                         </ul>
                     </div>
                     <!-- Row for color selection -->
