--- a/src/views/game.html
+++ b/src/views/game.html
@@ -53,7 +53,7 @@
                             <!-- Tool option -->
                             <li class='tool-option' id="tool-option-1" onClick = 'pen()'>
                                 <!-- Icon for pen -->
-                                <img class="svg" id = 'pen-option' src="/images/pen.svg" alt="">
+                                <img class="svg" id = 'penOption' src="/images/pen.svg" alt="">
                                 <!-- Label for pen -->
                                 <span>Pen</span>
                             </li>
@@ -61,7 +61,7 @@
                             <!-- Tool option -->
                             <li class='tool-option' id="tool-option-2" onClick = 'eraser()'>
                                 <!-- Icon for eraser -->
-                                <img class="svg" id = 'eraser-option' src="/images/eraser.svg" alt="">
+                                <img class="svg" id = 'eraserOption' src="/images/eraser.svg" alt="">
                                 <!-- Label for eraser -->
                                 <span>Eraser</span>
                             </li>
@@ -69,7 +69,7 @@
                             <!-- Tool option: Highlighter -->
                             <li class='tool-option' id = 'tool-option-3' onClick = 'highlighter()'>
                                 <!-- Icon for highlighter -->
-                                <img class="svg" id = 'highlighter-option' src="/images/paint-format.svg" alt="">
+                                <img class="svg" id = 'highlighterOption' src="/images/paint-format.svg" alt="">
                                 <!-- Label for highlighter -->
                                 <span>Highlighter</span>
                             </li>
@@ -77,7 +77,7 @@
                             <!-- Tool option: SprayCan -->
                             <li class='tool-option' id = 'tool-option-4' onClick = 'spraycan()'>
                                 <!-- Icon for spray can -->
-                                    <img class="svg" id = 'spraycan-option' src="/images/magic-wand.svg" alt="">
+                                    <img class="svg" id = 'spraycanOption' src="/images/magic-wand.svg" alt="">
                                     <!-- Label for spray can -->
                                     <span>SprayCan</span>
                             </li>
@@ -90,27 +90,27 @@
                         <!-- List of color options -->
                         <ul class='options color-options'>
                             <!-- Color option: Red -->
-                            <li><div onClick="changeColor(this)" id = 'red-color-option' class='btn-color-field' style='background: red;'></div></li>
+                            <li><div onClick="changeColor(this)" id = 'redColorOption' class='btn-color-field' style='background: red;'></div></li>
                             <!-- Color option: Green -->
-                            <li><div onClick="changeColor(this)" id = 'green-color-option' class='btn-color-field' style='background: green;'></div></li>
+                            <li><div onClick="changeColor(this)" id = 'greenColorOption' class='btn-color-field' style='background: green;'></div></li>
                             <!-- Color option: Blue -->
-                            <li><div onClick="changeColor(this)" id = 'blue-color-option' class='btn-color-field' style='background: blue;'></div></li>
+                            <li><div onClick="changeColor(this)" id = 'blueColorOption' class='btn-color-field' style='background: blue;'></div></li>
                             <!-- Color option: Purple -->
-                            <li><div onClick="changeColor(this)" id = 'purple-color-option' class='btn-color-field' style='background: purple;'></div></li>
+                            <li><div onClick="changeColor(this)" id = 'purpleColorOption' class='btn-color-field' style='background: purple;'></div></li>
                         </ul>
                         <!-- Input for color selection -->
-                        <input onInput = 'changeColorPicker(this.value)' type='color' class="color-option">
+                        <input onInput = 'changeColorPicker(this.value)' type='color' id = 'colorPicker' class="color-option">
                     </div>
                     <div class='row'>
                         <ul class='options'>
                             <!-- Button option -->
                             <li class='tool-option'>
-                                <button class='button draw-button' id='undo-canvas-button'>Undo</button>
+                                <button class='button draw-button' id='undoCanvasButton'>Undo</button>
                             </li>
         
                             <!-- Button option -->
                             <li class='tool-option'>
-                                <button class='button draw-button' id='clear-canvas-button'>Clear</button>
+                                <button class='button draw-button' id='clearCanvasButton'>Clear</button>
                             </li>
                         </ul>
                     </div>
