style: Adjust Sizing of Canvas and Tool Selection Box

--- a/src/views/game.html
+++ b/src/views/game.html
@@ -45,6 +45,7 @@
             <div id = "drawing-prompt" class = "container prompt-container">
                 <p id = "header-drawing-prompt" class = 'room-code-container'></p>
             </div>
+
             <div id="drawingScreen" class="flex-container">
                 <div class='tool-box' id='tool-box'>
                     <div class='row'>
@@ -121,7 +122,7 @@
                 </div>
 
                 <div style="display: flex; flex-direction: column; gap: 10px;">
-                    <div class = 'tool-box timer-container'>
+                    <div class = 'tool-box'>
                         <div class='row'>
                             <p class = 'title-drawing' id = 'timer-label'> Time Remaining</p>
                             <p class = 'countdown-timer' id = "countdownTimer"></p>
