--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,6 +59,17 @@ body {
     text-align: center;
 }
 
+.end-container {
+    background-color: #fff;; /* Set background color to transparent */
+    display: flex;
+    flex-direction: row; /* Stack items vertically */
+    justify-content: center; /* Ensure space between the columns */
+    padding: 20px;
+    text-align: center;
+    width: 40%;
+}
+
+
 .prompt-container {
     align-items: center; /* Center items horizontally */
     background-color: #fff;
