--- a/src/views/game.html
+++ b/src/views/game.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="/css/lobby.css">
     <link rel="stylesheet" href="/css/draw.css">
 </head>
-<body>
+<body id="body" >
     <!-- Lobby Container -->
     <div id="lobbyContainer" class="container">
         <!-- Room creation form -->
