fix: Bug Related To Prompt Headings

--- a/src/views/game.html
+++ b/src/views/game.html
@@ -207,15 +207,9 @@
 
         <div class="right-column">
             <div id="endGameResults" class="results-container">
-                <div class="prompt-container-end" id="initialPrompt">
-                    <p class="player-prompt-heading">Initial Prompt</p>
-                    <!-- <p id="initialPromptText" class="player-prompt">Test</p> -->
-                </div>
+                <div class="prompt-container-end" id="initialPrompt"></div>
                 <div class="drawing-container-end"></div>
-                <div class="prompt-container-end" id="finalPrompt">
-                    <p class="player-prompt-heading">Guess Prompt</p>
-                    <!-- <p id="initialPromptText" class="player-prompt">initialPromptText</p> -->
-                </div>
+                <div class="prompt-container-end" id="finalPrompt"></div>
             </div>
         </div>
     </div>
